# e-voting

./: Anchor.toml  README.md  package.json  recover.json
app/: .env  .env.example  next.config.js  package.json  tailwind.config.js
app/common/: Token.ts
app/components/: CandidateCard.tsx  CandidateList.tsx  ConfirmModal.tsx  Footer.tsx  Header.tsx  Modal.tsx  NewCandidateModal.tsx  NoCandidate.tsx  Spinner.tsx  VoteModal.tsx
app/config/: idl.json  keypair.json
app/context/: candidateContext.tsx
app/hooks/: useProgram.tsx  useProvider.tsx
app/pages/: _app.tsx  index.tsx
app/styles/: globals.css
app/types/: common.ts  program.ts
app/utils/: truncate.ts  wait.ts
programs/evoting-system/: Cargo.toml
programs/evoting-system/src/: lib.rs
scripts/: copy_idl.js
tests/: evoting-system.ts
